--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles_.css" rel="stylesheet"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light col-oranred">            
+        <nav class="navbar navbar-expand-lg navbar-light color-prin">            
             <div class="container px-0 px-lg-0">
                 <a href="./index.html" class="" target="_blank">
                     <img src="./img/logo.jpg" alt="logo" class="navbar-brand bor-das">
@@ -42,8 +46,15 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-secondary text-white" type="submit">
+                    <form class="d-flex"><!--Opciones*-->
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                            <li class="nav-item"><a class="btn text-white" aria-current="page" href="#">Sobre Nosotros</a></li>
+                            <li class="nav-item"><a class="btn text-white" aria-current="page" href="#">Registrar</a></li>
+                            <li>
+                                <button class="btn btn-outline-secondary text-white me-1" type="submit"><i class="me-1 color-tex">Login</i>
+                            </li>
+                        </ul>
+                        <button class="btn btn-outline-secondary text-white me-1" type="submit">
                             <i class="bi-cart-fill me-1 color-tex">Carro</i>
                             
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -53,24 +64,27 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-tienda py-5">
+        <header class="bg-header py-5">
             <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">KitKan: Ubica la moda aquí</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Nos diferenciamos por nuestra calidad y servicio</p>
+                <div class="text-center text-header">
+                    <h1 class="display-4 fw-bolder">KitKan Shop: Ubica la moda aquí</h1>
+                    <p class="lead fw-normal text-header mb-0">Nos diferenciamos por nuestra calidad y servicio</p>
                 </div>
             </div>
         </header>
         <!-- Section-->
-        <section class="py-5 col-redoran">
+        <section class="py-0">
+            <a href="https://web.whatsapp.com" class="text-primary posab">
+                <img src="./img/whatsapp.png" class="br-da ico-tw btn btn-outline-dark" alt="whatsapp" width="40" height="40">
+            </a>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/ropas.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/ropas.jpg" alt="homeimg1" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Ropas en tendencia</h5>
@@ -79,7 +93,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opciones</a></div>
                             </div>
                         </div>
@@ -89,9 +103,9 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">% Descuento</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/accesorios.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/accesorios.jpg" alt="homeimg2" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Accesorios especiales</h5>
@@ -109,7 +123,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -119,9 +133,9 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">% Descuento</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/zapatillas.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/zapatillas.jpg" alt="homeimg3" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Calzados de calidad</h5>
@@ -131,7 +145,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -139,9 +153,9 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/productoropa1.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/productoropa1.jpg" alt="homeimg4" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Ropa popular</h5>
@@ -158,7 +172,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -168,9 +182,9 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">% Descuento</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/productozapatilla1.png" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/productozapatilla1.png" alt="homeimg5" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Zapatilla popular</h5>
@@ -180,7 +194,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -188,9 +202,9 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/productoaccesorio1.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/productoaccesorio1.jpg" alt="homeimg6" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Accesorio elegante</h5>
@@ -199,7 +213,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver opciones</a></div>
                             </div>
                         </div>
@@ -209,9 +223,9 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">% Descuento</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/accesorios/accesorio2.jpeg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/accesorios/accesorio2.jpeg" alt="homeimg7" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Mochilas</h5>
@@ -229,7 +243,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -237,9 +251,9 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="./img/accesorios2.jpg" alt="..." />
+                            <img class="card-img-top borde1pxtop" src="./img/accesorios2.jpg" alt="homeimg8" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-4 borde1pxcent">
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">3 en 1: Ropa-Calzado-Accesorio</h5>
@@ -256,7 +270,7 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent borde1pxbott">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">¡Lo quiero!</a></div>
                             </div>
                         </div>
@@ -265,8 +279,19 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+        <footer class="py-5 color-prin2">            
+            <div class="container">
+                <ul class="m-0 text-white">
+                    <li class="btn m-0 text-white disp-b-m text-start colump1" href="#">Más Información</li>
+                    <li class="btn m-0 text-white disp-b text-start colump1" href="#">Sobre Nosotros</li>
+                    <li class="btn m-0 text-white disp-b text-start colump1" href="#">Bolsa de Trabajo</li>
+                    <li class="btn m-0 text-white disp-b text-start colump1" href="#">Ubicación</li>
+                    <li class="btn m-0 text-white disp-b text-start colump1" href="#">Libro de Reclamación (Virtual)</li>
+                </ul>                
+            </div>
+            <div class="container">
+                <p class="m-0 text-end text-white">Copyright &copy; MFMMGZ 2022</p>                             
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
